--- a/home.css
+++ b/home.css
@@ -1,91 +1,16 @@
+
+body {
+    margin: 0;
+    line-height: normal;
+}
+
 .home-page-child {
     position: absolute;
-    top: 1665.5px;
-    left: 0px;
+    top: 2510px;
+    left: -154px;
     width: 1440px;
     height: 839.5px;
 }
-
-.image-of-a-rural-girl {
-    position: absolute;
-    top: 95px;
-    left: 41px;
-    width: 163px;
-    height: 186px;
-    object-fit: cover;
-}
-
-.logo-of-portal-child {
-    position: absolute;
-    width: calc(100% + 1261px);
-    top: -11px;
-    right: -1220px;
-    left: -41px;
-    background-color: #9f96ff;
-    height: 61px;
-}
-
-.p-l-a {
-    position: absolute;
-    width: calc(100% - 72px);
-    top: 24px;
-    left: 42px;
-    white-space: pre-wrap;
-    display: inline-block;
-    height: 10px;
-}
-
-.grameenshiksha {
-    position: absolute;
-    width: calc(100% - 38px);
-    top: 4px;
-    left: 38px;
-    font-size: 16px;
-    color: #fff;
-    display: inline-block;
-}
-
-.hugeiconselearning-exchange {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 38px;
-    height: 38px;
-    overflow: hidden;
-}
-
-.logo-of-portal {
-    position: absolute;
-    top: 11px;
-    left: 41px;
-    width: 199px;
-    height: 38px;
-    font-size: 10px;
-    color: #0f0d0d;
-    font-family: 'Mate SC';
-}
-
-.sub-heading {
-    position: absolute;
-    top: 260px;
-    left: 257px;
-    font-size: 20px;
-    font-family: 'Li Alinur Banglaborno Unicode';
-    color: rgba(0, 0, 0, 0.5);
-    display: inline-block;
-    width: 644px;
-}
-
-.heading {
-    position: absolute;
-    top: 116px;
-    left: 240px;
-    font-size: 48px;
-    display: flex;
-    align-items: center;
-    width: 609px;
-}
-
 .button-login-child {
     position: absolute;
     height: 100%;
@@ -98,25 +23,25 @@
     border-radius: 58px;
     background-color: #ffc57c;
 }
-
 .sign-up {
     position: absolute;
     width: 58.14%;
-    top: 13.33%;
+    top: 20%;
     left: 20.93%;
-    display: inline-block;
-    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-
 .button-login {
     position: absolute;
-    top: 91px;
-    left: 1176px;
+    top: 33px;
+    left: 1180px;
+    backdrop-filter: blur(10px);
     width: 129px;
     height: 45px;
-    text-align: center;
+    font-size: 24px;
+    font-family: Alice;
 }
-
 .button-sign-up-child {
     position: absolute;
     height: 100%;
@@ -129,271 +54,97 @@
     border-radius: 58px;
     background: linear-gradient(90deg, #b4f8fd, #90f3f9);
 }
-
-.button-sign-up {
+.sign-up1 {
     position: absolute;
-    top: 94px;
-    left: 1020px;
-    width: 129px;
-    height: 45px;
-    text-align: center;
-    font-size: 20px;
-}
-
-.home-page-item {
-    position: absolute;
-    top: 61px;
-    left: 1332px;
-    width: 228px;
-    height: 213px;
-}
-
-.rectangle-for-demo-class {
-    width: 211px;
-    position: relative;
-    border-radius: 58px;
-    height: 64px;
-    z-index: 0;
-}
-
-.rectangle-for-live {
-    width: 211px;
-    position: relative;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 58px;
-    background-color: #cfe86d;
-    height: 64px;
-    z-index: 1;
-}
-
-.vector-icon {
-    width: 3.95%;
-    position: absolute;
-    margin: 0 !important;
-    height: 36.09%;
-    top: 35.94%;
-    right: 30.63%;
-    bottom: 27.97%;
-    left: 65.42%;
-    max-width: 100%;
-    overflow: hidden;
-    max-height: 100%;
-    z-index: 2;
-}
-
-.live-class {
-    width: 103px;
-    position: absolute;
-    margin: 0 !important;
-    top: calc(50% - 12px);
-    left: calc(50% + 110px);
-    display: flex;
-    align-items: center;
-    height: 29.2px;
-    z-index: 3;
-}
-
-.demo-class {
-    width: 129px;
-    position: absolute;
-    margin: 0 !important;
-    top: calc(50% - 15px);
-    left: calc(50% - 203px);
-    text-align: center;
+    width: 58.14%;
+    top: 24.44%;
+    left: 20.93%;
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 4;
 }
-
-.rectangle-for-demo-class-parent {
+.button-sign-up {
     position: absolute;
-    top: 397px;
-    left: 271px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 84px;
-}
-
-.vector-icon1 {
-    position: absolute;
-    height: 0.8%;
-    width: 1.39%;
-    top: 16.89%;
-    right: 78.13%;
-    bottom: 82.32%;
-    left: 20.49%;
-    max-width: 100%;
-    overflow: hidden;
-    max-height: 100%;
-}
-
-.the-grameensikha-platform {
-    position: absolute;
-    width: calc(100% - 652px);
-    top: 1382px;
-    left: 347px;
+    top: 33px;
+    left: 1017px;
+    backdrop-filter: blur(10px);
+    width: 129px;
+    height: 45px;
     font-size: 20px;
-    font-family: 'Li Alinur Banglaborno Unicode';
-    color: #040404;
-    display: flex;
-    align-items: center;
+    font-family: Alice;
 }
-
-.why-choose-grameenshiksha {
-    position: absolute;
-    width: calc(100% - 789px);
-    top: 1297px;
-    left: 455px;
-    font-size: 40px;
-    display: flex;
-    align-items: center;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-.banner1-3d2x-1-icon {
-    position: absolute;
-    top: calc(50% - 152.5px);
-    left: calc(50% - 106px);
-    border-radius: 16px;
-    width: 333px;
-    height: 197px;
-    object-fit: cover;
-}
-
 .quizz-1-icon {
     position: absolute;
-    top: 1785px;
-    left: 225px;
+    top: 2642px;
+    left: 75px;
     width: 175px;
     height: 133px;
     object-fit: cover;
 }
-
+.feature2-3d2x-1-icon {
+    position: absolute;
+    top: 2637px;
+    left: 566px;
+    width: 175px;
+    height: 133px;
+    object-fit: cover;
+}
 .p {
     margin-block-start: 0;
     margin-block-end: 8px;
 }
-
-.quizzes-videos-live {
-    margin: 0;
-    font-size: 20px;
-    font-family: 'Li Alinur Banglaborno Unicode';
-}
-
-.quizzes-videos-live-container {
-    position: absolute;
-    top: 1785px;
-    left: 412px;
-    text-align: center;
-    display: inline-block;
-    width: 197px;
-    height: 124px;
-    font-size: 40px;
-}
-
-.feature2-3d2x-1-icon {
-    position: absolute;
-    top: 1780px;
-    left: 716px;
-    width: 175px;
-    height: 133px;
-    object-fit: cover;
-}
-
 .professional-mentors {
     position: absolute;
-    top: 1805px;
-    left: 903px;
-    text-align: center;
-    font-size: 40px;
+    top: 2662px;
+    left: 753px;
 }
-
 .image-1-icon {
     position: absolute;
-    top: 1981px;
-    left: 226px;
+    top: 2838px;
+    left: 76px;
     width: 175px;
     height: 133px;
     object-fit: cover;
 }
-
-.home-page-inner {
+.home-page-item {
     position: absolute;
-    top: 1630px;
-    left: 777px;
+    top: 2475px;
+    left: 633px;
     border-radius: 1500px 0px 0px 0px;
     background-color: #ddf9f8;
     width: 914px;
     height: 875px;
 }
-
+.course-completion-certificate {
+    margin: 0;
+    font-size: 20px;
+    font-family: 'Li Alinur Banglaborno Unicode';
+}
 .certificate-course-completion-container {
     position: absolute;
-    top: 2000px;
-    left: 909px;
-    text-align: center;
-    font-size: 40px;
+    top: 2857px;
+    left: 759px;
 }
-
 .support-call-container {
     position: absolute;
-    top: 2000px;
-    left: 396px;
-    text-align: center;
-    font-size: 40px;
+    top: 2857px;
+    left: 246px;
 }
-
-.libray-1-icon {
-    position: absolute;
-    top: 557px;
-    left: 1006px;
-    width: 478px;
-    height: 260px;
-    object-fit: cover;
-}
-
 .image-2-icon {
     position: absolute;
-    top: 1989px;
-    left: 709px;
+    top: 2846px;
+    left: 559px;
     width: 175px;
     height: 133px;
     object-fit: cover;
 }
-
-.about-us {
-    position: absolute;
-    top: 16px;
-    left: 1033px;
-    text-decoration: underline;
-    color: #fff;
-    display: inline-block;
-    width: 103px;
-    height: 28px;
-}
-
-.contact-us {
-    position: absolute;
-    top: 16px;
-    left: 1171px;
-    text-decoration: underline;
-    color: #fff;
-    display: inline-block;
-    width: 134px;
-    height: 28px;
-    cursor: pointer;
-}
-
 .may-i-help {
     position: absolute;
-    top: 898px;
-    left: 128px;
+    top: 2722px;
+    left: 34px;
     font-size: 32px;
+    text-align: left;
 }
-
 .frame-child {
     position: absolute;
     top: 11px;
@@ -401,262 +152,314 @@
     width: 1440px;
     height: 53px;
 }
-
 .copyright-2024-2030 {
     position: absolute;
     top: 0px;
     left: 396px;
     background: linear-gradient(#fff, #fff), #000;
     -webkit-background-clip: text;
-    background-clip: text;
-    /* Standard property */
     -webkit-text-fill-color: transparent;
 }
-
 .vector-parent {
     position: absolute;
-    top: 2441px;
+    top: 3071px;
     left: 0px;
     width: 1440px;
     height: 64px;
+    text-align: left;
+    font-size: 24px;
     font-family: 'Amiri Quran';
 }
-
-.cute-robot-sitting-with-text-c-icon {
+.user-profile-icon {
     position: absolute;
-    top: 870px;
-    left: 397px;
-    width: 96px;
+    top: 0px;
+    left: 1329px;
+    width: 100px;
+    height: 100px;
+}
+.expand-right-icon {
+    position: absolute;
+    top: 10px;
+    left: 140px;
+    width: 38px;
+    height: 38px;
+    object-fit: contain;
+}
+.courses {
+    position: absolute;
+    top: 31px;
+    left: 532px;
+    width: 178px;
+    height: 50px;
+    font-size: 36px;
+    font-family: 'Maiandra GD';
+}
+.home {
+    position: absolute;
+    top: 31px;
+    left: 357px;
+    width: 167px;
+    height: 50px;
+    font-size: 36px;
+    font-family: 'Maiandra GD';
+}
+.shiksha-sahayak {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 296px;
+    height: 69px;
+}
+.home2 {
+    position: absolute;
+    top: 22px;
+    left: 88px;
+    width: 296px;
+    height: 69px;
+    font-size: 36px;
+    font-family: 'Marcellus SC';
+}
+.resousces {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 167px;
+    height: 50px;
+}
+.expand-right-icon1 {
+    position: absolute;
+    top: 10px;
+    left: 167px;
+    width: 38px;
+    height: 38px;
+    object-fit: contain;
+}
+.resources {
+    position: absolute;
+    top: 31px;
+    left: 762px;
+    width: 205px;
+    height: 50px;
+    font-size: 36px;
+    font-family: 'Maiandra GD';
+}
+.logo-icon {
+    position: absolute;
+    top: 4px;
+    left: 3px;
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+}
+.background-image-1-icon {
+    position: absolute;
+    top: 117px;
+    left: 0px;
+    width: 1440px;
+    height: 744px;
+    object-fit: cover;
+}
+.heading-txt {
+    width: 100%;
+}
+.heading {
+    position: absolute;
+    top: 92px;
+    left: calc(50% - 821px);
+    font-size: 120px;
+    font-family: Aclonica;
+    background: radial-gradient(50% 50% at 50% 50%, #b200e8, #3463ae 88.9%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    display: flex;
+    align-items: center;
+    width: 1643px;
+    height: 304px;
+}
+.heading1 {
+    position: absolute;
+    top: 592px;
+    left: calc(50% - 1031px);
+    font-size: 120px;
+    font-family: Aclonica;
+    color: #fff5f5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 2063px;
+    height: 331px;
+}
+.heading2 {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 303px;
+    height: 76px;
+}
+.first-background-image-icon {
+    position: absolute;
+    top: 11px;
+    left: 344px;
+    border-radius: 139px;
+    width: 99px;
     height: 103px;
     object-fit: cover;
 }
-
-.bg {
+.chatbot {
     position: absolute;
-    height: 100%;
-    width: 100%;
     top: 0px;
-    right: 0px;
-    bottom: 0px;
     left: 0px;
-    background-color: #fff;
+    width: 443px;
+    height: 114px;
 }
-
-.secondary-nav-bar-child {
+.group-child {
     position: absolute;
-    width: calc(100% - 303px);
-    right: 151.5px;
-    bottom: -0.5px;
-    left: 151.5px;
-    border-top: 1px solid #f2eff2;
-    box-sizing: border-box;
-    height: 1px;
+    top: 57px;
+    left: 208px;
+    width: 168.3px;
+    height: 113.7px;
+    object-fit: contain;
 }
-
-.bg1 {
+.chatbot-parent {
     position: absolute;
-    height: 100%;
-    width: 100%;
+    top: 861px;
+    left: 70px;
+    width: 443px;
+    height: 170.7px;
+    color: #181818;
+    font-family: Aubrey;
+}
+.libray-1-icon {
+    position: absolute;
+    top: 872px;
+    left: 996px;
+    width: 478px;
+    height: 260px;
+    object-fit: cover;
+}
+.heading3 {
+    position: absolute;
     top: 0px;
-    right: 0px;
-    bottom: 0px;
     left: 0px;
-    border-radius: 4px;
-    border: 1px solid #ff469f;
-    box-sizing: border-box;
-}
-
-.button-bg {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
-}
-
-.watch-demo {
-    position: absolute;
-    height: calc(100% - 16px);
-    width: calc(100% - 32px);
-    top: 8px;
-    left: 16px;
-    letter-spacing: 0.01em;
-    line-height: 160%;
-    font-weight: 600;
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 594px;
+    height: 80px;
 }
-
-.bottun-outlined {
+.children-deserves-bright {
     position: absolute;
-    bottom: 18px;
-    left: 920px;
-    width: 176px;
-    height: 40px;
-    overflow: hidden;
-    font-size: 14px;
-    color: #ff469f;
-    font-family: Poppins;
-}
-
-.bg2 {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
-    border-radius: 4px;
-    background-color: #ff469f;
-}
-
-.buy-now {
-    position: absolute;
-    height: calc(100% - 10.9px);
-    width: calc(100% - 10px);
-    top: 5px;
-    left: 5px;
-    letter-spacing: 0.01em;
-    line-height: 160%;
-    font-weight: 600;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.botton-filled {
-    position: absolute;
-    bottom: 18px;
-    left: 1112px;
-    width: 172px;
-    height: 40px;
-    overflow: hidden;
-    font-size: 16.96px;
-    color: #fff;
-    font-family: Poppins;
-}
-
-.line {
-    position: absolute;
-    width: 100%;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
-    background-color: #fff;
-    height: 2px;
-}
-
-.about-course {
-    position: absolute;
-    height: calc(100% - 36px);
-    width: calc(100% - 16px);
-    top: 16px;
-    left: 8px;
-    letter-spacing: 0.01em;
-    line-height: 160%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.secondary-nav-bar-menu-act {
-    position: absolute;
-    height: calc(100% - 8px);
-    top: 8px;
-    bottom: 0px;
-    left: 152px;
-    width: 136px;
-    overflow: hidden;
+    top: 63px;
+    left: 116px;
     font-size: 16px;
-    color: #fff;
+    letter-spacing: 0.19em;
     font-family: Poppins;
+    background: linear-gradient(#141414, #141414), #000;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 362px;
+    height: 33px;
 }
-
-.secondary-nav-bar-menu-def {
+.heading-parent {
     position: absolute;
-    height: calc(100% - 8px);
-    top: 8px;
-    bottom: 0px;
-    left: 304px;
-    width: 152px;
+    top: 1032px;
+    left: 423px;
+    width: 594px;
+    height: 96px;
+    font-size: 48px;
+    font-family: Aclonica;
 }
-
-.succcess-stories {
+.group-item {
     position: absolute;
-    top: 16px;
-    left: 5px;
-    letter-spacing: 0.01em;
-    line-height: 160%;
-}
-
-.secondary-nav-bar-menu-def1 {
-    position: absolute;
-    height: calc(100% - 8px);
-    top: 8px;
-    bottom: 0px;
-    left: 632px;
-    width: 152px;
-}
-
-.faqs {
-    position: absolute;
-    top: 16px;
-    left: 9px;
-    letter-spacing: 0.01em;
-    line-height: 160%;
-}
-
-.secondary-nav-bar-menu-def2 {
-    position: absolute;
-    height: calc(100% - 8px);
-    top: 8px;
-    bottom: 0px;
-    left: 800px;
-    width: 64px;
-}
-
-.about-publisher {
-    position: absolute;
-    top: 16px;
+    top: 0px;
     left: 0px;
-    letter-spacing: 0.01em;
-    line-height: 160%;
-}
-
-.secondary-nav-bar-menu-def3 {
-    position: absolute;
-    height: calc(100% - 8px);
-    top: 8px;
-    bottom: 0px;
-    left: 472px;
-    width: 144px;
-}
-
-.secondary-nav-bar {
-    position: absolute;
-    top: 481px;
-    left: 41px;
-    width: 1440px;
-    height: 76px;
+    background: linear-gradient(180deg, #e5e1e1 18.5%, #b2afaf 59.25%, #999696 79.62%, #8c8989 89.81%, #868383 94.91%, #7f7d7d);
+    width: 388px;
+    height: 260px;
     overflow: hidden;
-    text-align: center;
-    font-size: 20px;
-    color: #807a82;
 }
-
+.group-inner {
+    position: absolute;
+    top: 0px;
+    left: 910px;
+    background: linear-gradient(180deg, #e5e1e1 18.5%, #b2afaf 59.25%, #999696 79.62%, #8c8989 89.81%, #868383 94.91%, #7f7d7d);
+    width: 388px;
+    height: 260px;
+    overflow: hidden;
+}
+.frame-div {
+    position: absolute;
+    top: 0px;
+    left: 455px;
+    background: linear-gradient(180deg, #e5e1e1 18.5%, #b2afaf 59.25%, #999696 79.62%, #8c8989 89.81%, #868383 94.91%, #7f7d7d);
+    width: 388px;
+    height: 260px;
+    overflow: hidden;
+}
+.frame-parent {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 1298px;
+    height: 260px;
+}
+.frame-group {
+    position: absolute;
+    top: 356px;
+    left: 0px;
+    width: 1298px;
+    height: 260px;
+}
+.group-parent {
+    position: absolute;
+    top: 1287px;
+    left: 72px;
+    width: 1298px;
+    height: 616px;
+}
+.with-a-dedicated {
+    position: absolute;
+    top: 1128px;
+    left: calc(50% - 494px);
+    font-size: 14px;
+    font-family: Aclonica;
+    white-space: pre-wrap;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 988px;
+    height: 40px;
+}
+.comp-5-1-icon {
+    position: absolute;
+    top: 1066px;
+    left: 87px;
+    width: 78px;
+    height: 78px;
+    object-fit: cover;
+}
 .home-page {
     width: 100%;
     position: relative;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    background-color: #ffffe9;
-    height: 2505px;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.25), rgba(102, 102, 102, 0.25) 4.5%, rgba(255, 251, 251, 0.25) 56%);
+    height: 3350px;
     overflow: hidden;
-    text-align: left;
-    font-size: 24px;
+    text-align: center;
+    font-size: 40px;
     color: #000;
     font-family: 'Li Al Quds Unicode';
 }
+
