--- a/home.css
+++ b/home.css
@@ -4,13 +4,6 @@ body {
     line-height: normal;
 }
 
-.home-page-child {
-    position: absolute;
-    top: 2510px;
-    left: -154px;
-    width: 1440px;
-    height: 839.5px;
-}
 .button-login-child {
     position: absolute;
     height: 100%;
@@ -73,103 +66,6 @@ body {
     font-size: 20px;
     font-family: Alice;
 }
-.quizz-1-icon {
-    position: absolute;
-    top: 2642px;
-    left: 75px;
-    width: 175px;
-    height: 133px;
-    object-fit: cover;
-}
-.feature2-3d2x-1-icon {
-    position: absolute;
-    top: 2637px;
-    left: 566px;
-    width: 175px;
-    height: 133px;
-    object-fit: cover;
-}
-.p {
-    margin-block-start: 0;
-    margin-block-end: 8px;
-}
-.professional-mentors {
-    position: absolute;
-    top: 2662px;
-    left: 753px;
-}
-.image-1-icon {
-    position: absolute;
-    top: 2838px;
-    left: 76px;
-    width: 175px;
-    height: 133px;
-    object-fit: cover;
-}
-.home-page-item {
-    position: absolute;
-    top: 2475px;
-    left: 633px;
-    border-radius: 1500px 0px 0px 0px;
-    background-color: #ddf9f8;
-    width: 914px;
-    height: 875px;
-}
-.course-completion-certificate {
-    margin: 0;
-    font-size: 20px;
-    font-family: 'Li Alinur Banglaborno Unicode';
-}
-.certificate-course-completion-container {
-    position: absolute;
-    top: 2857px;
-    left: 759px;
-}
-.support-call-container {
-    position: absolute;
-    top: 2857px;
-    left: 246px;
-}
-.image-2-icon {
-    position: absolute;
-    top: 2846px;
-    left: 559px;
-    width: 175px;
-    height: 133px;
-    object-fit: cover;
-}
-.may-i-help {
-    position: absolute;
-    top: 2722px;
-    left: 34px;
-    font-size: 32px;
-    text-align: left;
-}
-.frame-child {
-    position: absolute;
-    top: 11px;
-    left: 0px;
-    width: 1440px;
-    height: 53px;
-}
-.copyright-2024-2030 {
-    position: absolute;
-    top: 0px;
-    left: 396px;
-    background: linear-gradient(#fff, #fff), #000;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-.vector-parent {
-    position: absolute;
-    top: 3071px;
-    left: 0px;
-    width: 1440px;
-    height: 64px;
-    text-align: left;
-    font-size: 24px;
-    font-family: 'Amiri Quran';
-}
 .user-profile-icon {
     position: absolute;
     top: 0px;
@@ -191,7 +87,6 @@ body {
     left: 532px;
     width: 178px;
     height: 50px;
-    font-size: 36px;
     font-family: 'Maiandra GD';
 }
 .home {
@@ -200,7 +95,6 @@ body {
     left: 357px;
     width: 167px;
     height: 50px;
-    font-size: 36px;
     font-family: 'Maiandra GD';
 }
 .shiksha-sahayak {
@@ -219,7 +113,6 @@ body {
     left: 88px;
     width: 296px;
     height: 69px;
-    font-size: 36px;
     font-family: 'Marcellus SC';
 }
 .resousces {
@@ -246,7 +139,6 @@ body {
     left: 762px;
     width: 205px;
     height: 50px;
-    font-size: 36px;
     font-family: 'Maiandra GD';
 }
 .logo-icon {
@@ -260,10 +152,14 @@ body {
 .background-image-1-icon {
     position: absolute;
     top: 117px;
-    left: 0px;
+    left: calc(50% - 720px);
     width: 1440px;
     height: 744px;
     object-fit: cover;
+}
+.all-kids-are {
+    margin-block-start: 0;
+    margin-block-end: 8px;
 }
 .heading-txt {
     width: 100%;
@@ -273,7 +169,6 @@ body {
     top: 92px;
     left: calc(50% - 821px);
     font-size: 120px;
-    font-family: Aclonica;
     background: radial-gradient(50% 50% at 50% 50%, #b200e8, #3463ae 88.9%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -287,7 +182,6 @@ body {
     top: 592px;
     left: calc(50% - 1031px);
     font-size: 120px;
-    font-family: Aclonica;
     color: #fff5f5;
     display: flex;
     align-items: center;
@@ -331,25 +225,40 @@ body {
 }
 .chatbot-parent {
     position: absolute;
-    top: 861px;
-    left: 70px;
+    top: 905px;
+    left: 56px;
     width: 443px;
     height: 170.7px;
+    font-size: 40px;
     color: #181818;
     font-family: Aubrey;
 }
 .libray-1-icon {
     position: absolute;
-    top: 872px;
-    left: 996px;
+    top: 861px;
+    right: 0px;
     width: 478px;
     height: 260px;
     object-fit: cover;
 }
 .heading3 {
     position: absolute;
-    top: 0px;
-    left: 0px;
+    top: 1041px;
+    left: calc(50% - 153px);
+    font-size: 48px;
+    font-family: Afacad;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 303px;
+    height: 80px;
+    text-shadow: 0px 4px 4px #bdbdbd;
+}
+.heading5 {
+    position: absolute;
+    top: 1813px;
+    left: 359px;
+    font-size: 48px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -358,9 +267,9 @@ body {
 }
 .children-deserves-bright {
     position: absolute;
-    top: 63px;
-    left: 116px;
-    font-size: 16px;
+    top: 1869px;
+    left: calc(50% - 295px);
+    font-size: 20px;
     letter-spacing: 0.19em;
     font-family: Poppins;
     background: linear-gradient(#141414, #141414), #000;
@@ -369,41 +278,103 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 362px;
+    width: 465px;
     height: 33px;
 }
-.heading-parent {
+.with-a-dedicated {
     position: absolute;
-    top: 1032px;
-    left: 423px;
-    width: 594px;
-    height: 96px;
-    font-size: 48px;
-    font-family: Aclonica;
+    top: 1909px;
+    left: calc(50% - 558px);
+    font-size: 16px;
+    white-space: pre-wrap;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 988px;
+    height: 40px;
 }
-.group-item {
+.personalized-student-dashboard {
+    position: absolute;
+    top: 24px;
+    left: 24px;
+}
+.a-gamified-dashboard {
+    position: absolute;
+    bottom: 17px;
+    left: calc(50% - 170px);
+    display: flex;
+    align-items: center;
+    width: 359px;
+    height: 181px;
+}
+.personalized-student-dashboard-parent {
     position: absolute;
     top: 0px;
     left: 0px;
-    background: linear-gradient(180deg, #e5e1e1 18.5%, #b2afaf 59.25%, #999696 79.62%, #8c8989 89.81%, #868383 94.91%, #7f7d7d);
+    border-radius: 17px;
+    background: linear-gradient(120.43deg, rgba(252, 246, 240, 0.3), rgba(251, 207, 165, 0.7));
+    border: 1px solid #000;
+    box-sizing: border-box;
     width: 388px;
     height: 260px;
     overflow: hidden;
 }
-.group-inner {
+.adaptive-quizzes {
+    position: absolute;
+    top: 25px;
+    left: 25px;
+}
+.ai-powered-quizzes-that {
+    position: absolute;
+    bottom: 30px;
+    left: calc(50% - 169px);
+    display: flex;
+    align-items: center;
+    width: 338px;
+    height: 181px;
+}
+.adaptive-quizzes-gamified-le-parent {
     position: absolute;
     top: 0px;
     left: 910px;
-    background: linear-gradient(180deg, #e5e1e1 18.5%, #b2afaf 59.25%, #999696 79.62%, #8c8989 89.81%, #868383 94.91%, #7f7d7d);
+    border-radius: 17px;
+    background: linear-gradient(120.43deg, rgba(252, 246, 240, 0.3), rgba(251, 207, 165, 0.7));
+    border: 1px solid #000;
+    box-sizing: border-box;
     width: 388px;
     height: 260px;
     overflow: hidden;
 }
-.frame-div {
+.interactive-e-book-library {
+    position: absolute;
+    top: 25px;
+    left: 29px;
+}
+.icon {
+    position: absolute;
+    top: 215px;
+    left: 109px;
+    width: 279px;
+    height: 260px;
+    overflow: hidden;
+}
+.a-collection-of {
+    position: absolute;
+    bottom: 21px;
+    left: calc(50% - 165px);
+    display: flex;
+    align-items: center;
+    width: 338px;
+    height: 181px;
+}
+.interactive-e-book-library-parent {
     position: absolute;
     top: 0px;
     left: 455px;
-    background: linear-gradient(180deg, #e5e1e1 18.5%, #b2afaf 59.25%, #999696 79.62%, #8c8989 89.81%, #868383 94.91%, #7f7d7d);
+    border-radius: 17px;
+    background: linear-gradient(120.43deg, rgba(252, 246, 240, 0.3), rgba(251, 207, 165, 0.7));
+    border: 1px solid #000;
+    box-sizing: border-box;
     width: 388px;
     height: 260px;
     overflow: hidden;
@@ -415,51 +386,486 @@ body {
     width: 1298px;
     height: 260px;
 }
+.community-peer {
+    position: absolute;
+    top: 39px;
+    left: 30px;
+}
+.a-safe-discussion {
+    position: absolute;
+    bottom: 7px;
+    left: calc(50% - 164px);
+    display: flex;
+    align-items: center;
+    width: 338px;
+    height: 181px;
+}
+.live-classes {
+    position: absolute;
+    top: 29px;
+    left: 23px;
+}
+.video-window-real-time {
+    margin: 0;
+}
+.video-window-real-time-container {
+    position: absolute;
+    bottom: 13px;
+    left: calc(50% - 171px);
+    display: flex;
+    align-items: center;
+    width: 338px;
+    height: 181px;
+}
+.video-integration-embedded-container {
+    position: absolute;
+    bottom: 0px;
+    left: calc(50% - 160px);
+    display: flex;
+    align-items: center;
+    width: 338px;
+    height: 181px;
+}
+.animated-video-lessons {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    display: inline-block;
+    width: 333px;
+}
+.animated-video-lessons-ar-le-wrapper {
+    position: absolute;
+    top: 31px;
+    left: 39px;
+    width: 333px;
+    height: 48px;
+    text-align: center;
+}
 .frame-group {
     position: absolute;
-    top: 356px;
+    top: 463px;
     left: 0px;
     width: 1298px;
     height: 260px;
 }
+.group-div {
+    position: absolute;
+    top: 79px;
+    left: 0px;
+    filter: drop-shadow(5px 5px 4px rgba(244, 230, 199, 0.25));
+    width: 1298px;
+    height: 723px;
+}
+.icon1 {
+    position: absolute;
+    top: 0px;
+    left: 923px;
+    border-radius: 18px;
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+}
+.ani-cartoon-38-1-icon {
+    position: absolute;
+    top: 463px;
+    left: 471px;
+    border-radius: 11px;
+    width: 127.3px;
+    height: 100px;
+    object-fit: cover;
+}
+.p3mtr0-971-1-icon {
+    position: absolute;
+    top: 462px;
+    left: 924px;
+    border-radius: 18px;
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+}
+.group-container {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 1298px;
+    height: 802px;
+}
+.group-wrapper {
+    position: absolute;
+    top: 37px;
+    left: 0px;
+    width: 1298px;
+    height: 802px;
+}
+.xmlid-55-icon {
+    position: absolute;
+    height: 28.54%;
+    width: 32%;
+    top: 44.61%;
+    right: 49.79%;
+    bottom: 26.86%;
+    left: 18.21%;
+    max-width: 100%;
+    overflow: hidden;
+    max-height: 100%;
+}
+.xmlid-19-icon {
+    position: absolute;
+    height: 64.57%;
+    width: 66.4%;
+    top: 8.25%;
+    right: 4.31%;
+    bottom: 27.18%;
+    left: 29.29%;
+    max-width: 100%;
+    overflow: hidden;
+    max-height: 100%;
+}
+.xmlid-327-icon {
+    position: absolute;
+    height: 36.88%;
+    width: 35.6%;
+    top: 21.56%;
+    right: 22.35%;
+    bottom: 41.56%;
+    left: 42.05%;
+    max-width: 100%;
+    overflow: hidden;
+    max-height: 100%;
+}
+.xmlid-163-icon {
+    position: absolute;
+    height: 21.04%;
+    width: 20.3%;
+    top: 59.98%;
+    right: 45.49%;
+    bottom: 18.98%;
+    left: 34.21%;
+    max-width: 100%;
+    overflow: hidden;
+    max-height: 100%;
+}
+.xmlid-312-icon {
+    position: absolute;
+    height: 24.3%;
+    width: 23.5%;
+    top: 32.47%;
+    right: 61.14%;
+    bottom: 43.22%;
+    left: 15.36%;
+    max-width: 100%;
+    overflow: hidden;
+    max-height: 100%;
+}
+.xmlid-164-icon {
+    position: absolute;
+    height: 20.07%;
+    width: 19.4%;
+    top: 4.6%;
+    right: 53.56%;
+    bottom: 75.32%;
+    left: 27.04%;
+    max-width: 100%;
+    overflow: hidden;
+    max-height: 100%;
+}
+.xmlid-161-icon {
+    position: absolute;
+    height: 26.96%;
+    width: 26%;
+    top: 0%;
+    right: 5.2%;
+    bottom: 73.04%;
+    left: 68.8%;
+    max-width: 100%;
+    overflow: hidden;
+    max-height: 100%;
+}
+.xmlid-159-icon {
+    position: absolute;
+    height: 18.98%;
+    width: 18.3%;
+    top: 32.57%;
+    right: 0.04%;
+    bottom: 48.45%;
+    left: 81.66%;
+    max-width: 100%;
+    overflow: hidden;
+    max-height: 100%;
+}
+.xmlid-89-icon {
+    position: absolute;
+    height: 29.38%;
+    width: 28.4%;
+    top: 55.68%;
+    right: 6.9%;
+    bottom: 14.93%;
+    left: 64.7%;
+    max-width: 100%;
+    overflow: hidden;
+    max-height: 100%;
+}
+.xmlid-108-icon {
+    position: absolute;
+    height: 13.54%;
+    width: 13.1%;
+    top: 4.14%;
+    right: 36.06%;
+    bottom: 82.31%;
+    left: 50.84%;
+    max-width: 100%;
+    overflow: hidden;
+    max-height: 100%;
+}
+.xmlid-353-icon {
+    position: absolute;
+    height: 84.78%;
+    width: 85.02%;
+    top: 15.04%;
+    right: 7.36%;
+    bottom: 0.18%;
+    left: 7.62%;
+    max-width: 100%;
+    overflow: hidden;
+    max-height: 100%;
+}
+.xmlid-51-icon {
+    position: absolute;
+    height: 16.96%;
+    width: 100%;
+    top: 55.13%;
+    right: 0%;
+    bottom: 27.92%;
+    left: 0%;
+    max-width: 100%;
+    overflow: hidden;
+    max-height: 100%;
+}
+.xmlid-50-icon {
+    position: absolute;
+    height: 7.27%;
+    width: 32.96%;
+    top: 82.31%;
+    right: 33.56%;
+    bottom: 10.43%;
+    left: 33.48%;
+    max-width: 100%;
+    overflow: hidden;
+    max-height: 100%;
+}
+.xmlid-403-icon {
+    position: absolute;
+    height: 58.82%;
+    width: 95.13%;
+    top: 0%;
+    right: 2.24%;
+    bottom: 41.18%;
+    left: 2.63%;
+    max-width: 100%;
+    overflow: hidden;
+    max-height: 100%;
+}
+.xmlid-401-icon {
+    position: absolute;
+    height: 100%;
+    width: 20.45%;
+    top: 0%;
+    right: 79.55%;
+    bottom: 0%;
+    left: 0%;
+    max-width: 100%;
+    overflow: hidden;
+    max-height: 100%;
+}
+.xmlid-399-icon {
+    position: absolute;
+    height: 100%;
+    width: 20.45%;
+    top: 1.12%;
+    right: -0.15%;
+    bottom: -1.12%;
+    left: 79.69%;
+    max-width: 100%;
+    overflow: hidden;
+    max-height: 100%;
+}
+.xmlid-398- {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0%;
+    right: 0%;
+    bottom: 0%;
+    left: 0%;
+}
+.xmlid-374- {
+    position: absolute;
+    height: 2.42%;
+    width: 49.44%;
+    top: 60.81%;
+    right: 25.19%;
+    bottom: 36.77%;
+    left: 25.37%;
+}
+.xmlid-373-icon {
+    position: absolute;
+    height: 7.61%;
+    width: 17.98%;
+    top: 53.64%;
+    right: 60.89%;
+    bottom: 38.75%;
+    left: 21.13%;
+    max-width: 100%;
+    overflow: hidden;
+    max-height: 100%;
+}
+.xmlid-372-icon {
+    position: absolute;
+    height: 7.61%;
+    width: 17.98%;
+    top: 53.64%;
+    right: 20.5%;
+    bottom: 38.75%;
+    left: 61.52%;
+    max-width: 100%;
+    overflow: hidden;
+    max-height: 100%;
+}
+.xmlid-29-icon {
+    position: absolute;
+    height: 12.8%;
+    width: 5.24%;
+    top: 63.61%;
+    right: 44.72%;
+    bottom: 23.59%;
+    left: 50.04%;
+    max-width: 100%;
+    overflow: hidden;
+    max-height: 100%;
+}
+.xmlid-28- {
+    position: absolute;
+    height: 34.95%;
+    width: 26.7%;
+    top: 65.16%;
+    right: 73.3%;
+    bottom: -0.1%;
+    left: 0%;
+}
+.objects {
+    position: absolute;
+    height: 9.86%;
+    width: 7.7%;
+    top: 6.44%;
+    right: 90.68%;
+    bottom: 83.71%;
+    left: 1.62%;
+}
+.vector-icon {
+    position: absolute;
+    height: 5.94%;
+    width: 5.35%;
+    top: 9.42%;
+    right: 57.82%;
+    bottom: 84.65%;
+    left: 36.83%;
+    max-width: 100%;
+    overflow: hidden;
+    max-height: 100%;
+}
+.group-icon {
+    position: absolute;
+    height: 65.53%;
+    width: 100%;
+    top: 34.43%;
+    right: 0%;
+    bottom: 0.04%;
+    left: 0%;
+    max-width: 100%;
+    overflow: hidden;
+    max-height: 100%;
+}
+.vector-icon1 {
+    position: absolute;
+    height: 25.36%;
+    width: 28.8%;
+    top: 0%;
+    right: 60.67%;
+    bottom: 74.64%;
+    left: 10.53%;
+    max-width: 100%;
+    overflow: hidden;
+    max-height: 100%;
+}
+.group {
+    position: absolute;
+    height: 15.04%;
+    width: 7.7%;
+    top: 0%;
+    right: 55.86%;
+    bottom: 84.96%;
+    left: 36.44%;
+}
+.group-icon1 {
+    position: absolute;
+    height: 9.86%;
+    width: 7.7%;
+    top: 56.26%;
+    right: 85.98%;
+    bottom: 33.89%;
+    left: 6.32%;
+    max-width: 100%;
+    overflow: hidden;
+    max-height: 100%;
+}
 .group-parent {
     position: absolute;
-    top: 1287px;
-    left: 72px;
+    top: 1949px;
+    left: 71px;
     width: 1298px;
-    height: 616px;
+    height: 839px;
+    text-align: left;
+    font-size: 20px;
+    font-family: Inter;
 }
-.with-a-dedicated {
+.library {
     position: absolute;
-    top: 1128px;
-    left: calc(50% - 494px);
-    font-size: 14px;
-    font-family: Aclonica;
-    white-space: pre-wrap;
+    top: calc(50% - 974px);
+    left: calc(50% + 468px);
+    font-size: 24px;
+    font-family: ABeeZee;
+    text-align: left;
     display: flex;
     align-items: center;
-    justify-content: center;
-    width: 988px;
-    height: 40px;
+    width: 103px;
+    height: 29.2px;
 }
-.comp-5-1-icon {
+.send-fill-icon {
     position: absolute;
-    top: 1066px;
-    left: 87px;
-    width: 78px;
-    height: 78px;
+    top: 1061px;
+    left: 539px;
+    width: 50px;
+    height: 50px;
     object-fit: cover;
+}
+.my-batches-icon-1 {
+    position: absolute;
+    top: 1110px;
+    left: -159px;
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
 }
 .home-page {
     width: 100%;
     position: relative;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.25), rgba(102, 102, 102, 0.25) 4.5%, rgba(255, 251, 251, 0.25) 56%);
-    height: 3350px;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.25), rgba(102, 102, 102, 0.25) 16%, rgba(255, 251, 251, 0.25) 74.9%);
+    height: 3078px;
     overflow: hidden;
     text-align: center;
-    font-size: 40px;
+    font-size: 36px;
     color: #000;
-    font-family: 'Li Al Quds Unicode';
+    font-family: Aclonica;
 }
 
