--- a/home.css
+++ b/home.css
@@ -1,8 +1,11 @@
+/* Reset and Base Styles */
 
 body {
     margin: 0;
     line-height: normal;
 }
+
+
 .button-login-child {
     position: absolute;
     height: 100%;
