--- a/home.css
+++ b/home.css
@@ -5,7 +5,6 @@ body {
     line-height: normal;
 }
 
-
 .button-login-child {
     position: absolute;
     height: 100%;
@@ -309,6 +308,7 @@ body {
     position: absolute;
     bottom: 17px;
     left: calc(50% - 170px);
+    font-family: Inter;
     display: flex;
     align-items: center;
     width: 359px;
@@ -335,6 +335,7 @@ body {
     position: absolute;
     bottom: 30px;
     left: calc(50% - 169px);
+    font-family: Inter;
     display: flex;
     align-items: center;
     width: 338px;
@@ -369,6 +370,7 @@ body {
     position: absolute;
     bottom: 21px;
     left: calc(50% - 165px);
+    font-family: Inter;
     display: flex;
     align-items: center;
     width: 338px;
@@ -402,6 +404,7 @@ body {
     position: absolute;
     bottom: 7px;
     left: calc(50% - 164px);
+    font-family: Inter;
     display: flex;
     align-items: center;
     width: 338px;
@@ -422,6 +425,7 @@ body {
     position: absolute;
     bottom: 13px;
     left: calc(50% - 171px);
+    font-family: Inter;
     display: flex;
     align-items: center;
     width: 338px;
@@ -448,8 +452,22 @@ body {
     top: 31px;
     left: 39px;
     width: 333px;
-    height: 48px;
+    height: 50px;
     text-align: center;
+    font-family: Jaro;
+}
+.video-integration-embedded-an-parent {
+    position: absolute;
+    top: 0px;
+    left: 455px;
+    border-radius: 17px;
+    background: linear-gradient(120.43deg, rgba(252, 246, 240, 0.3), rgba(251, 207, 165, 0.7));
+    border: 1px solid #000;
+    box-sizing: border-box;
+    width: 388px;
+    height: 260px;
+    overflow: hidden;
+    font-family: Inter;
 }
 .frame-group {
     position: absolute;
@@ -820,10 +838,10 @@ body {
     position: absolute;
     height: 9.86%;
     width: 7.7%;
-    top: 56.26%;
-    right: 85.98%;
-    bottom: 33.89%;
-    left: 6.32%;
+    top: 61.03%;
+    right: 90.06%;
+    bottom: 29.12%;
+    left: 2.23%;
     max-width: 100%;
     overflow: hidden;
     max-height: 100%;
@@ -836,7 +854,7 @@ body {
     height: 839px;
     text-align: left;
     font-size: 20px;
-    font-family: Inter;
+    font-family: Jaro;
 }
 .send-fill-icon {
     position: absolute;
