--- a/home.css
+++ b/home.css
@@ -1,4 +1,10 @@
 /* Reset and Base Styles */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    display: block;
+}
 
 body {
     margin: 0;
@@ -17,6 +23,7 @@ body {
     border-radius: 58px;
     background-color: #ffc57c;
 }
+
 .sign-up {
     position: absolute;
     width: 58.14%;
@@ -26,6 +33,7 @@ body {
     align-items: center;
     justify-content: center;
 }
+
 .button-login {
     position: absolute;
     top: 33px;
@@ -36,6 +44,7 @@ body {
     font-size: 24px;
     font-family: Alice;
 }
+
 .button-sign-up-child {
     position: absolute;
     height: 100%;
@@ -48,6 +57,7 @@ body {
     border-radius: 58px;
     background: linear-gradient(90deg, #b4f8fd, #90f3f9);
 }
+
 .sign-up1 {
     position: absolute;
     width: 58.14%;
@@ -57,6 +67,7 @@ body {
     align-items: center;
     justify-content: center;
 }
+
 .button-sign-up {
     position: absolute;
     top: 33px;
@@ -67,6 +78,7 @@ body {
     font-size: 20px;
     font-family: Alice;
 }
+
 .user-profile-icon {
     position: absolute;
     top: 0px;
@@ -74,6 +86,7 @@ body {
     width: 100px;
     height: 100px;
 }
+
 .expand-right-icon {
     position: absolute;
     top: 10px;
@@ -82,6 +95,7 @@ body {
     height: 38px;
     object-fit: contain;
 }
+
 .courses {
     position: absolute;
     top: 31px;
@@ -89,6 +103,7 @@ body {
     width: 178px;
     height: 50px;
 }
+
 .home {
     position: absolute;
     top: 31px;
@@ -96,6 +111,7 @@ body {
     width: 167px;
     height: 50px;
 }
+
 .shiksha-sahayak {
     position: absolute;
     top: 0px;
@@ -106,6 +122,7 @@ body {
     width: 296px;
     height: 69px;
 }
+
 .home2 {
     position: absolute;
     top: 22px;
@@ -114,6 +131,7 @@ body {
     height: 69px;
     font-family: 'Marcellus SC';
 }
+
 .resousces {
     position: absolute;
     top: 0px;
@@ -124,6 +142,7 @@ body {
     width: 167px;
     height: 50px;
 }
+
 .expand-right-icon1 {
     position: absolute;
     top: 10px;
@@ -132,6 +151,7 @@ body {
     height: 38px;
     object-fit: contain;
 }
+
 .resources {
     position: absolute;
     top: 31px;
@@ -139,6 +159,7 @@ body {
     width: 205px;
     height: 50px;
 }
+
 .logo-icon {
     position: absolute;
     top: 4px;
@@ -147,6 +168,7 @@ body {
     height: 100px;
     object-fit: cover;
 }
+
 .button-login-parent {
     position: absolute;
     top: 0px;
@@ -156,6 +178,7 @@ body {
     font-size: 36px;
     font-family: 'Maiandra GD';
 }
+
 .background-image-1-icon {
     position: absolute;
     top: 117px;
@@ -164,6 +187,7 @@ body {
     height: 744px;
     object-fit: cover;
 }
+
 .heading {
     position: absolute;
     top: 104px;
@@ -178,6 +202,7 @@ body {
     width: 1083px;
     height: 136px;
 }
+
 .heading1 {
     position: absolute;
     top: 664px;
@@ -190,6 +215,7 @@ body {
     width: 1430px;
     height: 153px;
 }
+
 .heading2 {
     position: absolute;
     top: 0px;
@@ -200,6 +226,7 @@ body {
     width: 303px;
     height: 76px;
 }
+
 .first-background-image-icon {
     position: absolute;
     top: 11px;
@@ -209,6 +236,7 @@ body {
     height: 103px;
     object-fit: cover;
 }
+
 .chatbot {
     position: absolute;
     top: 0px;
@@ -216,6 +244,7 @@ body {
     width: 443px;
     height: 114px;
 }
+
 .group-child {
     position: absolute;
     top: 57px;
@@ -224,6 +253,7 @@ body {
     height: 113.7px;
     object-fit: contain;
 }
+
 .chatbot-parent {
     position: absolute;
     top: 905px;
@@ -234,6 +264,7 @@ body {
     color: #181818;
     font-family: Aubrey;
 }
+
 .libray-1-icon {
     position: absolute;
     top: 861px;
@@ -242,6 +273,7 @@ body {
     height: 260px;
     object-fit: cover;
 }
+
 .heading3 {
     position: absolute;
     top: 1041px;
@@ -254,6 +286,7 @@ body {
     height: 80px;
     text-shadow: 0px 4px 4px #bdbdbd;
 }
+
 .heading5 {
     position: absolute;
     top: 0px;
@@ -264,6 +297,7 @@ body {
     width: 594px;
     height: 80px;
 }
+
 .children-deserves-bright {
     position: absolute;
     top: 56px;
@@ -280,6 +314,7 @@ body {
     width: 465px;
     height: 33px;
 }
+
 .with-a-dedicated {
     position: absolute;
     top: 96px;
@@ -292,6 +327,7 @@ body {
     width: 988px;
     height: 40px;
 }
+
 .heading-parent {
     position: absolute;
     top: 1813px;
@@ -299,11 +335,13 @@ body {
     width: 988px;
     height: 136px;
 }
+
 .personalized-student-dashboard {
     position: absolute;
     top: 24px;
     left: 24px;
 }
+
 .a-gamified-dashboard {
     position: absolute;
     bottom: 17px;
@@ -314,6 +352,7 @@ body {
     width: 359px;
     height: 181px;
 }
+
 .personalized-student-dashboard-parent {
     position: absolute;
     top: 0px;
@@ -326,11 +365,13 @@ body {
     height: 260px;
     overflow: hidden;
 }
+
 .adaptive-quizzes {
     position: absolute;
     top: 25px;
     left: 25px;
 }
+
 .ai-powered-quizzes-that {
     position: absolute;
     bottom: 30px;
@@ -341,6 +382,7 @@ body {
     width: 338px;
     height: 181px;
 }
+
 .adaptive-quizzes-gamified-le-parent {
     position: absolute;
     top: 0px;
@@ -353,11 +395,13 @@ body {
     height: 260px;
     overflow: hidden;
 }
+
 .interactive-e-book-library {
     position: absolute;
     top: 25px;
     left: 29px;
 }
+
 .icon {
     position: absolute;
     top: 215px;
@@ -366,6 +410,7 @@ body {
     height: 260px;
     overflow: hidden;
 }
+
 .a-collection-of {
     position: absolute;
     bottom: 21px;
@@ -376,6 +421,7 @@ body {
     width: 338px;
     height: 181px;
 }
+
 .interactive-e-book-library-parent {
     position: absolute;
     top: 0px;
@@ -388,6 +434,7 @@ body {
     height: 260px;
     overflow: hidden;
 }
+
 .frame-parent {
     position: absolute;
     top: 0px;
@@ -395,11 +442,13 @@ body {
     width: 1298px;
     height: 260px;
 }
+
 .community-peer {
     position: absolute;
     top: 39px;
     left: 30px;
 }
+
 .a-safe-discussion {
     position: absolute;
     bottom: 7px;
@@ -410,17 +459,21 @@ body {
     width: 338px;
     height: 181px;
 }
+
 .live-classes {
     position: absolute;
     top: 29px;
     left: 23px;
 }
+
 .video-window-real-time {
     margin: 0;
 }
+
 .video-window-real-time-container1 {
     width: 100%;
 }
+
 .video-window-real-time-container {
     position: absolute;
     bottom: 13px;
@@ -431,6 +484,7 @@ body {
     width: 338px;
     height: 181px;
 }
+
 .video-integration-embedded-container {
     position: absolute;
     bottom: 0px;
@@ -440,6 +494,7 @@ body {
     width: 338px;
     height: 181px;
 }
+
 .animated-video-lessons {
     position: absolute;
     top: 0px;
@@ -447,6 +502,7 @@ body {
     display: inline-block;
     width: 333px;
 }
+
 .animated-video-lessons-ar-le-wrapper {
     position: absolute;
     top: 31px;
@@ -456,6 +512,7 @@ body {
     text-align: center;
     font-family: Jaro;
 }
+
 .video-integration-embedded-an-parent {
     position: absolute;
     top: 0px;
@@ -469,6 +526,7 @@ body {
     overflow: hidden;
     font-family: Inter;
 }
+
 .frame-group {
     position: absolute;
     top: 463px;
@@ -476,6 +534,7 @@ body {
     width: 1298px;
     height: 260px;
 }
+
 .group-div {
     position: absolute;
     top: 79px;
@@ -484,6 +543,7 @@ body {
     width: 1298px;
     height: 723px;
 }
+
 .icon1 {
     position: absolute;
     top: 0px;
@@ -493,6 +553,7 @@ body {
     height: 100px;
     object-fit: cover;
 }
+
 .ani-cartoon-38-1-icon {
     position: absolute;
     top: 463px;
@@ -502,6 +563,7 @@ body {
     height: 100px;
     object-fit: cover;
 }
+
 .p3mtr0-971-1-icon {
     position: absolute;
     top: 462px;
@@ -511,6 +573,7 @@ body {
     height: 100px;
     object-fit: cover;
 }
+
 .group-container {
     position: absolute;
     top: 0px;
@@ -518,6 +581,7 @@ body {
     width: 1298px;
     height: 802px;
 }
+
 .group-wrapper {
     position: absolute;
     top: 37px;
@@ -525,6 +589,7 @@ body {
     width: 1298px;
     height: 802px;
 }
+
 .xmlid-55-icon {
     position: absolute;
     height: 28.54%;
@@ -537,6 +602,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .xmlid-19-icon {
     position: absolute;
     height: 64.57%;
@@ -549,6 +615,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .xmlid-327-icon {
     position: absolute;
     height: 36.88%;
@@ -561,6 +628,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .xmlid-163-icon {
     position: absolute;
     height: 21.04%;
@@ -573,6 +641,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .xmlid-312-icon {
     position: absolute;
     height: 24.3%;
@@ -585,6 +654,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .xmlid-164-icon {
     position: absolute;
     height: 20.07%;
@@ -597,6 +667,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .xmlid-161-icon {
     position: absolute;
     height: 26.96%;
@@ -609,6 +680,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .xmlid-159-icon {
     position: absolute;
     height: 18.98%;
@@ -621,6 +693,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .xmlid-89-icon {
     position: absolute;
     height: 29.38%;
@@ -633,6 +706,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .xmlid-108-icon {
     position: absolute;
     height: 13.54%;
@@ -645,6 +719,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .xmlid-353-icon {
     position: absolute;
     height: 84.78%;
@@ -657,6 +732,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .xmlid-51-icon {
     position: absolute;
     height: 16.96%;
@@ -669,6 +745,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .xmlid-50-icon {
     position: absolute;
     height: 7.27%;
@@ -681,6 +758,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .xmlid-403-icon {
     position: absolute;
     height: 58.82%;
@@ -693,6 +771,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .xmlid-401-icon {
     position: absolute;
     height: 100%;
@@ -705,6 +784,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .xmlid-399-icon {
     position: absolute;
     height: 100%;
@@ -717,6 +797,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .xmlid-398- {
     position: absolute;
     height: 100%;
@@ -726,6 +807,7 @@ body {
     bottom: 0%;
     left: 0%;
 }
+
 .xmlid-374- {
     position: absolute;
     height: 2.42%;
@@ -735,6 +817,7 @@ body {
     bottom: 36.77%;
     left: 25.37%;
 }
+
 .xmlid-373-icon {
     position: absolute;
     height: 7.61%;
@@ -747,6 +830,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .xmlid-372-icon {
     position: absolute;
     height: 7.61%;
@@ -759,6 +843,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .xmlid-29-icon {
     position: absolute;
     height: 12.8%;
@@ -771,6 +856,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .xmlid-28- {
     position: absolute;
     height: 34.95%;
@@ -780,6 +866,7 @@ body {
     bottom: -0.1%;
     left: 0%;
 }
+
 .objects {
     position: absolute;
     height: 9.86%;
@@ -789,6 +876,7 @@ body {
     bottom: 83.71%;
     left: 1.62%;
 }
+
 .vector-icon {
     position: absolute;
     height: 5.94%;
@@ -801,6 +889,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .group-icon {
     position: absolute;
     height: 65.53%;
@@ -813,6 +902,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .vector-icon1 {
     position: absolute;
     height: 25.36%;
@@ -825,6 +915,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .group {
     position: absolute;
     height: 15.04%;
@@ -834,6 +925,7 @@ body {
     bottom: 84.96%;
     left: 36.44%;
 }
+
 .group-icon1 {
     position: absolute;
     height: 9.86%;
@@ -846,6 +938,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .group-parent {
     position: absolute;
     top: 1949px;
@@ -856,6 +949,7 @@ body {
     font-size: 20px;
     font-family: Jaro;
 }
+
 .send-fill-icon {
     position: absolute;
     top: 1061px;
@@ -864,6 +958,7 @@ body {
     height: 50px;
     object-fit: cover;
 }
+
 .my-batches-icon-2 {
     position: absolute;
     top: 79px;
@@ -872,6 +967,7 @@ body {
     height: 60px;
     overflow: hidden;
 }
+
 .heading6 {
     position: absolute;
     top: 139px;
@@ -882,6 +978,7 @@ body {
     width: 177px;
     height: 38px;
 }
+
 .heading7 {
     position: absolute;
     top: 366px;
@@ -892,6 +989,7 @@ body {
     width: 177px;
     height: 38px;
 }
+
 .heading8 {
     position: absolute;
     top: 139px;
@@ -902,6 +1000,7 @@ body {
     width: 177px;
     height: 38px;
 }
+
 .heading9 {
     position: absolute;
     top: 139px;
@@ -912,6 +1011,7 @@ body {
     width: 177px;
     height: 38px;
 }
+
 .heading10 {
     position: absolute;
     top: 187px;
@@ -926,6 +1026,7 @@ body {
     text-shadow: 1px 0 0 rgba(4, 4, 4, 0.2), 0 1px 0 rgba(4, 4, 4, 0.2), -1px 0 0 rgba(4, 4, 4, 0.2), 0 -1px 0 rgba(4, 4, 4, 0.2);
     opacity: 0.78;
 }
+
 .heading11 {
     position: absolute;
     top: 422px;
@@ -940,6 +1041,7 @@ body {
     text-shadow: 1px 0 0 rgba(4, 4, 4, 0.2), 0 1px 0 rgba(4, 4, 4, 0.2), -1px 0 0 rgba(4, 4, 4, 0.2), 0 -1px 0 rgba(4, 4, 4, 0.2);
     opacity: 0.78;
 }
+
 .heading12 {
     position: absolute;
     top: 185px;
@@ -954,6 +1056,7 @@ body {
     text-shadow: 1px 0 0 rgba(4, 4, 4, 0.2), 0 1px 0 rgba(4, 4, 4, 0.2), -1px 0 0 rgba(4, 4, 4, 0.2), 0 -1px 0 rgba(4, 4, 4, 0.2);
     opacity: 0.78;
 }
+
 .heading13 {
     position: absolute;
     top: 186px;
@@ -968,6 +1071,7 @@ body {
     text-shadow: 1px 0 0 rgba(4, 4, 4, 0.2), 0 1px 0 rgba(4, 4, 4, 0.2), -1px 0 0 rgba(4, 4, 4, 0.2), 0 -1px 0 rgba(4, 4, 4, 0.2);
     opacity: 0.78;
 }
+
 .dashboard-1-icon {
     position: absolute;
     top: 41px;
@@ -976,6 +1080,7 @@ body {
     height: 107px;
     overflow: hidden;
 }
+
 .vector-icon2 {
     position: absolute;
     height: 12.8%;
@@ -988,6 +1093,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .group-icon2 {
     position: absolute;
     height: 8.67%;
@@ -1000,6 +1106,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .group-icon3 {
     position: absolute;
     height: 14.77%;
@@ -1012,6 +1119,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .group-icon4 {
     position: absolute;
     height: 3.8%;
@@ -1024,6 +1132,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .group-icon5 {
     position: absolute;
     height: 2.58%;
@@ -1036,6 +1145,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .group-icon6 {
     position: absolute;
     height: 9.82%;
@@ -1048,6 +1158,7 @@ body {
     overflow: hidden;
     max-height: 100%;
 }
+
 .feature2-3d2x-1-icon {
     position: absolute;
     top: 306px;
@@ -1056,6 +1167,7 @@ body {
     height: 60px;
     object-fit: cover;
 }
+
 .heading14 {
     position: absolute;
     top: 366px;
@@ -1066,6 +1178,7 @@ body {
     width: 177px;
     height: 38px;
 }
+
 .heading15 {
     position: absolute;
     top: 422px;
@@ -1080,6 +1193,7 @@ body {
     text-shadow: 1px 0 0 rgba(4, 4, 4, 0.2), 0 1px 0 rgba(4, 4, 4, 0.2), -1px 0 0 rgba(4, 4, 4, 0.2), 0 -1px 0 rgba(4, 4, 4, 0.2);
     opacity: 0.78;
 }
+
 .heading16 {
     position: absolute;
     top: 366px;
@@ -1090,6 +1204,7 @@ body {
     width: 177px;
     height: 38px;
 }
+
 .heading17 {
     position: absolute;
     top: 422px;
@@ -1104,6 +1219,7 @@ body {
     text-shadow: 1px 0 0 rgba(4, 4, 4, 0.2), 0 1px 0 rgba(4, 4, 4, 0.2), -1px 0 0 rgba(4, 4, 4, 0.2), 0 -1px 0 rgba(4, 4, 4, 0.2);
     opacity: 0.78;
 }
+
 .vector-icon3 {
     position: absolute;
     top: 306px;
@@ -1111,6 +1227,7 @@ body {
     width: 60px;
     height: 60px;
 }
+
 .import-icon {
     position: absolute;
     top: 306px;
@@ -1118,6 +1235,7 @@ body {
     width: 60px;
     height: 60px;
 }
+
 .quick-acces {
     position: absolute;
     top: 1137px;
@@ -1132,6 +1250,7 @@ body {
     font-size: 32px;
     font-family: Amaranth;
 }
+
 .home-page {
     width: 100%;
     position: relative;
@@ -1144,4 +1263,3 @@ body {
     color: #000;
     font-family: Aclonica;
 }
-
